# CyberArsenal

./: .gitignore  BUILD.md  Cargo.toml  Changelog.md  README.md
cyberarsenal/: Cargo.toml
cyberarsenal/src/: db.toml  main.rs
cyberarsenal/src/arsenal_objects/: command.rs
cyberarsenal/src/arsenal_terminal/: app.rs  mod.rs  renderer.rs
cyberarsenal/src/arsenal_terminal/panes/: info.rs  mod.rs  search.rs
cyberarsenal/src/misc/: logs.rs  mod.rs
docs/: INSTALL.md  TODO.md
setup/: Makefile  README.md  pyproject.toml
setup/data/: cmds.toml
setup/src/db_builder/: builder.py  logs.py
src/: db.toml  main.rs
src/arsenal_objects/: command.rs
src/arsenal_terminal/: app.rs  event.rs  renderer.rs  stateful_list.rs
src/misc/: inputs.rs
utils/: replace-old2new_ips.sh
utils/setup_pentest_folder/: prepare.py  settings.toml
