[package]
name = "cyberarsenal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "env-filter"] }
tracing-appender = "0.2"
arg = { version = "0.4.1", features = ["std"] }
chrono = "0.4.38"
clipboard = "0.5.0"
crossterm = "0.27.0"
home = "0.5.9"
regex = "1.10.4"
toml = "0.8.12"
tui = "0.19.0"
