[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "db_builder"
version = "0.1.0"
description = "SQLite Builder for CyberArsenal"

dependencies = [
    # Python has sqlite3 built-in

    # Optional SQLite helpers
    # "sqlalchemy",        # ORM
    # "aiosqlite",         # async access
    # "dataset",           # wrapper over sqlite/sqlalchemy

    # Add other dependencies
]
requires-python = ">=3.11"

[project.scripts]
db_builder = "db_builder.builder:main"
